	micro/ATmega128-3.sym micro/ATmega64-1.sym micro/FT245BM-1.sym
	micro/pic16F628-2.sym micro/pic18F242-1.sym micro/staver24m32-1.sym
	misc/6A259-1.sym misc/ADG601-1.sym misc/ADG602-1.sym misc/ADG619-1.sym
	misc/ADG620-1.sym national/ADC0831-1.sym national/DS1620-1.sym
	national/DS75176-1.sym: Checked in another set of user contributed
	symbols

2004-12-27 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Updated version to 20041228

	* Created new component library directories: mini-circuits st apex 
	allegro irf

	* 74/7404-4.sym 74/74133-2.sym 74/7414-2.sym 74/74238-1.sym
	74/7432-3.sym 74/7474-3.sym 74/74power-1.sym analog/capacitor-4.sym
	analog/darlington_NPN_PNP-1.sym analog/transformer-5.sym 
	analog/varistor-1.sym connector/DB25-3.sym connector/connector1-2.sym
	connector/connector10-2.sym connector/connector11-2.sym
	connector/connector12-2.sym connector/connector13-2.sym
	connector/connector14-2.sym connector/connector15-2.sym
	connector/connector16-2.sym connector/connector17-2.sym
	connector/connector18-2.sym connector/connector19-2.sym
	connector/connector2-2.sym connector/connector20-2.sym
	connector/connector21-2.sym connector/connector22-2.sym
	connector/connector23-2.sym connector/connector24-2.sym
	connector/connector25-2.sym connector/connector26-2.sym
	connector/connector27-2.sym connector/connector28-2.sym
	connector/connector29-2.sym connector/connector3-2.sym
	connector/connector30-2.sym connector/connector31-2.sym
	connector/connector32-2.sym connector/connector33-2.sym
	connector/connector34-2.sym connector/connector35-2.sym
	connector/connector36-2.sym connector/connector37-2.sym
	connector/connector38-2.sym connector/connector39-2.sym
	connector/connector4-2.sym connector/connector40-2.sym
	connector/connector5-2.sym connector/connector6-2.sym
	connector/connector7-2.sym connector/connector8-2.sym
	connector/connector9-2.sym connector/mains-entry-1.sym
	connector/terminal-1.sym diode/schottky-1.sym