@@ -1,4 +1,4 @@
-v 20031231 1
+v 20041228 1
 P 0 300 200 300 1 0 0
 {
 T 100 350 5 6 0 1 0 0 1
@@ -29,5 +29,3 @@ T 100 0 5 8 1 0 0 0 1
 w=10u
 T 600 0 5 8 1 0 0 0 1
 l=20u
-T 600 500 5 10 1 1 0 0 1
-value=1n
