@@ -1,4 +1,4 @@
-v 20031231 1
+v 20041228 1
 P 0 200 200 200 1 0 0
 {
 T 100 250 5 6 0 1 0 0 1
@@ -17,13 +17,11 @@ L 400 400 400 0 3 0 0 0 -1 -1
 L 500 400 500 0 3 0 0 0 -1 -1
 L 700 200 500 200 3 0 0 0 -1 -1
 L 400 200 200 200 3 0 0 0 -1 -1
-T 1000 300 5 8 0 0 0 0 1
+T 1000 400 5 8 0 0 0 0 1
 device=CAPACITOR
 T 100 400 5 10 1 1 0 0 1
 refdes=C?
 T 600 400 5 10 1 1 0 0 1
 value=1n
-T 1000 -100 5 8 0 1 0 0 1
+T 1000 200 5 8 0 0 0 0 1
 description=linear poly0 / poly1 capacitor
-T 600 250 5 8 1 1 0 0 1
-model-name=cpolylin
