@@ -1,4 +1,4 @@
-v 20031231 1
+v 20041228 1
 L 350 750 350 250 3 0 0 0 -1 -1
 T 1400 800 5 8 0 0 0 0 1
 device=NMOS_TRANSISTOR
