@@ -1,26 +1,24 @@
-v 20031231 1
+v 20041228 1
 P 1100 100 850 100 1 0 0
 {
 T 1000 150 5 6 0 1 0 0 1
 pinnumber=2
-T 1000 -50 5 8 0 0 0 0 1
+T 1000 50 5 8 0 0 0 0 1
 pinseq=2
 }
 P 0 100 250 100 1 0 0
 {
 T 100 150 5 6 0 1 0 0 1
 pinnumber=1
-T 100 -50 5 8 0 0 0 0 1
+T 100 50 5 8 0 0 0 0 1
 pinseq=1
 }
-T 1200 -150 5 8 0 0 0 0 1
+T 1200 300 5 8 0 0 0 0 1
 device=RESISTOR
 T 200 300 5 10 1 1 0 0 1
 refdes=R?
 B 250 0 600 200 3 0 0 0 -1 -1 0 -1 -1 -1 -1 -1
-T 356 50 5 8 1 1 0 0 1
-model-name=rpolyh
 T 700 300 5 10 1 1 0 0 1
 value=1k
-T 1200 -300 5 8 0 0 0 0 1
+T 1200 100 5 8 0 0 0 0 1
 description=high resistive poly0 resistor
