@@ -1,4 +1,4 @@
-v 20031231 1
+v 20041228 1
 P 1100 500 850 500 1 0 0
 {
 T 1000 550 5 6 0 1 0 0 1
@@ -17,14 +17,18 @@ T 1200 250 5 8 0 0 0 0 1
 device=RESISTOR
 T 200 700 5 10 1 1 0 0 1
 refdes=R?
-B 250 400 600 200 3 0 0 0 -1 -1 0 -1 -1 -1 -1 -1
 T 200 200 5 8 1 0 0 0 1
 l=10u
 T 200 0 5 8 1 0 0 0 1
 w=3u
-T 356 450 5 8 1 1 0 0 1
+T 606 650 5 8 1 1 0 0 1
 model-name=rpolyh
 T 1200 100 5 8 0 0 0 0 1
 description=high resistive poly0 resistor
-T 700 700 5 10 1 1 0 0 1
-value=1k
+L 250 500 300 400 3 0 0 0 -1 -1
+L 300 400 400 600 3 0 0 0 -1 -1
+L 400 600 500 400 3 0 0 0 -1 -1
+L 500 400 600 600 3 0 0 0 -1 -1
+L 600 600 700 400 3 0 0 0 -1 -1
+L 700 400 800 600 3 0 0 0 -1 -1
+L 800 600 850 500 3 0 0 0 -1 -1
