@@ -1,0 +1,30 @@
+v 20041228 1
+P 1100 100 850 100 1 0 0
+{
+T 1000 150 5 6 0 1 0 0 1
+pinnumber=2
+T 1000 50 5 8 0 0 0 0 1
+pinseq=2
+}
+P 0 100 250 100 1 0 0
+{
+T 100 150 5 6 0 1 0 0 1
+pinnumber=1
+T 100 50 5 8 0 0 0 0 1
+pinseq=1
+}
+T 1200 300 5 8 0 0 0 0 1
+device=RESISTOR
+T 200 300 5 10 1 1 0 0 1
+refdes=R?
+T 700 300 5 10 1 1 0 0 1
+value=1k
+T 1200 100 5 8 0 0 0 0 1
+description=high resistive poly0 resistor
+L 250 100 300 200 3 0 0 0 -1 -1
+L 300 200 400 0 3 0 0 0 -1 -1
+L 400 0 500 200 3 0 0 0 -1 -1
+L 500 200 600 0 3 0 0 0 -1 -1
+L 600 0 700 200 3 0 0 0 -1 -1
+L 700 200 800 0 3 0 0 0 -1 -1
+L 800 0 850 100 3 0 0 0 -1 -1
