@@ -1,31 +1,0 @@
-v 20031231 1
-P 0 300 200 300 1 0 0
-{
-T 100 350 5 6 0 1 0 0 1
-pinnumber=1
-T 100 150 5 8 0 0 0 0 1
-pinseq=1
-}
-P 900 300 700 300 1 0 0
-{
-T 700 350 5 6 0 1 0 0 1
-pinnumber=2
-T 700 150 5 8 0 0 0 0 1
-pinseq=2
-}
-L 400 500 400 100 3 0 0 0 -1 -1
-L 500 500 500 100 3 0 0 0 -1 -1
-L 700 300 500 300 3 0 0 0 -1 -1
-L 400 300 200 300 3 0 0 0 -1 -1
-T 1000 400 5 8 0 0 0 0 1
-device=CAPACITOR
-T 100 500 5 10 1 1 0 0 1
-refdes=C?
-T 1000 0 5 8 0 1 0 0 1
-description=linear poly0 / poly1 capacitor
-T 600 350 5 8 1 1 0 0 1
-model-name=cpolylin
-T 100 0 5 8 1 0 0 0 1
-w=10u
-T 600 0 5 8 1 0 0 0 1
-l=20u
