@@ -1,0 +1,10 @@
+dataasicpadsdir = @GEDADATADIR@/sym/asicpads
+
+dataasicpads_DATA = @dataasicpads@
+
+EXTRA_DIST = $(dataasicpads_DATA)
+
+MOSTLYCLEANFILES = *.log *~
+CLEANFILES = *.log *~
+DISTCLEANFILES = *.log core FILE *~ prototype.bak
+MAINTAINERCLEANFILES = *.log *~ Makefile.in configure
