@@ -1,0 +1,39 @@
+v 20041228 1
+P 800 200 1100 200 1 0 1
+{
+T 900 200 5 8 0 1 0 0 1
+pinnumber=pin_input
+T 1000 100 5 8 0 1 0 0 1
+pinseq=2
+}
+T 500 1231 5 10 1 1 0 0 1
+refdes=P?
+T 1400 1300 5 8 0 0 0 0 1
+device=pad
+B 0 0 800 1200 3 0 0 0 -1 -1 0 -1 -1 -1 -1 -1
+V 400 600 100 3 0 0 0 -1 -1 0 -1 -1 -1 -1 -1
+T 400 150 5 8 1 0 0 4 1
+IO
+B 50 50 700 1100 3 0 0 0 -1 -1 0 -1 -1 -1 -1 -1
+P 800 600 1100 600 1 0 1
+{
+T 900 600 5 8 0 1 0 0 1
+pinnumber=pin_output
+T 1000 500 5 8 0 1 0 0 1
+pinseq=3
+}
+P 800 1000 1100 1000 1 0 1
+{
+T 900 1000 5 8 0 1 0 0 1
+pinnumber=pin_enable
+T 1000 900 5 8 0 1 0 0 1
+pinseq=1
+}
+T 700 1000 9 8 1 0 0 7 1
+EN
+L 750 600 550 600 3 0 0 0 -1 -1
+L 550 600 650 500 3 0 0 0 -1 -1
+L 550 600 650 700 3 0 0 0 -1 -1
+L 550 200 750 200 3 0 0 0 -1 -1
+L 750 200 650 100 3 0 0 0 -1 -1
+L 750 200 650 300 3 0 0 0 -1 -1
