@@ -1,0 +1,17 @@
+v 20041228 1
+P 400 400 1100 400 1 0 1
+{
+T 900 400 5 8 0 1 0 0 1
+pinnumber=pin
+T 1000 300 5 8 0 1 0 0 1
+pinseq=1
+}
+T 500 831 5 10 1 1 0 0 1
+refdes=P?
+T 900 100 5 8 0 0 0 0 1
+device=pad
+B 0 0 800 800 3 0 0 0 -1 -1 0 -1 -1 -1 -1 -1
+V 400 400 100 3 0 0 0 -1 -1 0 -1 -1 -1 -1 -1
+T 400 150 5 8 1 0 0 4 1
+Pull Down
+B 50 50 700 700 3 0 0 0 -1 -1 0 -1 -1 -1 -1 -1
