@@ -1,0 +1,43 @@
+v 20041228 1
+B 0 0 900 600 3 0 0 0 -1 -1 0 -1 -1 -1 -1 -1
+T 500 700 9 10 1 1 0 0 1
+device=OSC
+T 500 900 8 10 1 1 0 0 1
+refdes=U?
+T 1000 1400 8 10 0 0 0 0 1
+footprint=OSC14
+T 1000 1600 8 10 0 0 0 0 1
+description=Generic Oscillator Can
+T 1000 1200 8 10 0 0 0 0 1
+numslots=0
+P 1200 100 900 100 1 0 0
+{
+T 950 150 5 10 1 1 0 0 1
+pinnumber=3
+T 950 -150 5 10 0 0 0 0 1
+pinseq=3
+T 950 -50 5 10 0 0 0 0 1
+pintype=out
+T 575 50 5 8 1 1 0 0 1
+pinlabel=OUT
+}
+T 182 50 3 10 0 1 0 0 1
+net=GND:2
+P 100 900 100 600 1 0 0
+{
+T 275 775 5 10 1 1 180 0 1
+pinnumber=4
+T 350 650 5 10 0 0 90 0 1
+pinseq=4
+T 250 650 5 10 0 0 90 0 1
+pintype=pwr
+T 50 450 5 8 1 1 0 0 1
+pinlabel=Vcc
+}
+L 75 175 225 175 3 0 0 0 -1 -1
+L 225 175 225 400 3 0 0 0 -1 -1
+L 225 400 400 400 3 0 0 0 -1 -1
+L 400 400 400 175 3 0 0 0 -1 -1
+L 400 175 575 175 3 0 0 0 -1 -1
+L 575 175 575 400 3 0 0 0 -1 -1
+L 575 400 725 400 3 0 0 0 -1 -1
